--- a/lispref/ChangeLog
+++ b/lispref/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-13  Luc Teirlinck  <teirllm@auburn.edu>
+
+	* windows.texi: Various changes in addition to:
+	(Splitting Windows): Add `split-window-keep-point'.
+
 2004-07-09  Richard M. Stallman  <rms@gnu.org>
 
 	* frames.texi (Input Focus): Minor fix.
