*** empty log message ***

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1475,6 +1475,14 @@
 	(timer-event-handler): Set triggered-p element non-nil while running
 	the timer function.
 
+2004-05-14  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* descr-text.el (describe-char-unicode-data)
+	(describe-char-unicodedata-file): Re-enable the unicode code now that
+	the licensing issues have been cleared in the unicode-4 license.
+	(describe-text-properties-1): Remove unused `overlay' var.
+	(describe-char): Remove unused var `buffer'.
+
 2004-05-14  David Ponce  <david@dponce.com>
 
 	* tree-widget.el: New file.
