*** empty log message ***

--- a/etc/ChangeLog
+++ b/etc/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-14  Luc Teirlinck  <teirllm@auburn.edu>
+
+	* MORE.STUFF: Tramp is now distributed with Emacs.
+
 2004-07-12  Bill Wohler  <wohler@newt.com>
 
 	* NEWS, MH-E-NEWS: Upgraded to MH-E version 7.4.4.
