--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-14  K,Ba(Broly L,Bu(Brentey  <lorentey@elte.hu>
+
+	* keyboard.c (echo_dash): Do nothing if there already is a dash
+	at the end of the echo string.
+
 2004-07-12  Kim F. Storm  <storm@cua.dk>
 
 	* alloc.c (mark_object): Only look at Lisp_Misc_Save_Value
