--- a/etc/TODO
+++ b/etc/TODO
@@ -87,7 +87,9 @@ to the FSF.
   latin-1-prefix and latin-1-postfix.
 
 ** Implement a clean way to use different major modes for
-  different parts of a buffer.
+  different parts of a buffer.  This could be useful in editing
+  Bison input files, for instance, or other kinds of text
+  where one language is embedded in another language.
 
 ** Give start-process the ability to direct standard-error
   output to a different filter.
@@ -107,8 +109,8 @@ to the FSF.
   See the Gnus development sources for assigned code concerning GPG
   use with mail, which is probably a good start.]
 
-** Save undo information in files, and reload it when needed
-  for undoing.
+** Save undo information in special temporary files, and reload it
+  when needed for undoing.  This could extend undo capacity.
 
 ** Merge the Emacs regex.c with the Glibc regex.c.
   They split off a few years ago through negligence.
