--- a/lispref/ChangeLog
+++ b/lispref/ChangeLog
@@ -1,3 +1,11 @@
+2004-07-17  Richard M. Stallman  <rms@gnu.org>
+
+	* display.texi (Overlay Properties): Adding `evaporate' prop
+	deletes empty overlay immediately.
+
+	* abbrevs.texi (Abbrev Expansion): Clarify pre-abbrev-expand-hook,
+	fix example.
+
 2004-07-16  Jim Blandy  <jimb@redhat.com>
 
 	* searching.texi (Regexp Backslash): Document new \_< and \_>
